--- a/FirebaseDashboard/src/auth/signup/Signup.css
+++ b/FirebaseDashboard/src/auth/signup/Signup.css
@@ -40,11 +40,11 @@
 .input-div input{
   width: 400px;
   height: 50px;
-  margin-top: 20px;
   background-color: var(--primary-color);
   border: none;
   border-radius: 10px;
   padding-left: 15px;
+  margin-bottom: 20px;
 }
 .input-div{
   display: flex;
@@ -58,6 +58,11 @@
 .forget{
     margin-top: 20px;
     margin-bottom: 20px;
+}
+.button-div{
+    width: 100%;
+    display: flex;
+    
 }
 
 
